--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset = "utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">    
     <title>Vigiapp</title>
+     <link rel="shortcut icon" href="images/logo.ico" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/bootflat.min.css">
  	<link rel="stylesheet" type="text/css" href="css/fontawesome.css">
- 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
+ 	<link rel="stylesheet" type="text/css" href="css/styles.css">
  	<script src="https://use.fontawesome.com/502b7294a9.js"></script>
 
 
@@ -46,23 +47,23 @@
   		<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
 		  <div class="carousel-inner">
 		    <div class="carousel-item active">
-		      <img class="d-block w-100" src="imagenes/5.png" alt="First slide">
+		      <img class="d-block w-100" src="images/5.png" alt="First slide">
 		      <div class="container" align="center">
 		     			<div class="carousel-caption">		     				
-		     				<font><p class="texto">
+		     				<font><p class="text">
 		     					<br><br><br><br><br><br><br><br>
 		     					VigiaApp un sitio para que informe los problemas de <br>
 		     					inseguridad de su barrio, sector o localidad! <br>
 		     					
 		     				</p></font>
-		     				<a class="download-btn" href="https://www.apple.com/co/ios/app-store/" target="_blank"><img src="imagenes/appstore.png" align="left" alt="Download App Store"  width="13%"></a>
+		     				<a class="download-btn" href="https://marvelapp.com/3a349e4" target="_blank"><img src="images/appstore.png" align="left" alt="Download App Store"  width="13%"></a>
 		     				<a class="download-btn" href="#"><img src="#" align="left" alt=" "  width="1%"></a>
-                            <a class="download-btn" href="https://play.google.com/store/apps?hl=es" target="_blank"><img src="imagenes/android.png" align="left" alt="Download Play Store"  width="15%"></a>	     				
+                            <a class="download-btn" href="https://marvelapp.com/3a349e4" target="_blank"><img src="images/android.png" align="left" alt="Download Play Store"  width="15%"></a>	     				
 		     			</div>
 		      </div>
 		    </div>
 		    <div class="carousel-item">
-		      <img class="d-block w-100" src="imagenes/6.png" alt="Second slide">
+		      <img class="d-block w-100" src="images/6.png" alt="Second slide">
 		    </div>		    
 		  </div>
 		  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -85,7 +86,7 @@
   		<div class="row">
 	  		<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" id="uno">
 	  			<div class="thumbnail text-center">
-	  				<img src="imagenes/droga.png" alt="" class="img-rounded">
+	  				<img src="images/8.png" alt="" class="img-rounded">
 	  				<div class="caption">
 	  					<h3>Reporte consumo de drogas</h3>
 	  					<p>
@@ -117,7 +118,7 @@
 	  		</div>
 	  		<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" id="tres">
 	  			<div class="thumbnail text-center">
-	  				<img src="imagenes/arma.png" alt="" class="img-rounded">
+	  				<img src="images/7.png" alt="" class="img-rounded">
 	  				<div class="caption">
 	  					<h3>Reporte personas con armas</h3>
 	  					<p>
@@ -133,23 +134,23 @@
 	  	</div>	
   	</section>	
 	<!--Seccion de Descargas-->	
-	<section id="descargas" class="download-section padding" data-scroll-id="download" tabindex="-1" style="outline: none;" background-image="imagenes/2.jpg">
+	<section id="descargas" class="download-section padding" data-scroll-id="download" tabindex="-1" style="outline: none;" background-image="images/2.jpg">
 		<br>  
 		<h3 align="center">Descargas</h3>
 
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
 		  <div class="carousel-inner">
 		    <div class="carousel-item active">
-		      <img class="d-block1 w-100" src="imagenes/2.jpg" alt="First slide">
-		      <div class="container" align="right">
+		      <img class="d-block1 w-100" src="images/2.jpg" alt="First slide">
+		      <div class="container" >
 		     			<div class="carousel-caption">		     				
-		     				<font><p class="texto1">
+		     				<font><p class="text1">
 		     				<br><br>		     					
-		     					Con su ayuda garantizaremos su seguridad y la de su familia.
+		     					Con su ayuda garantizaremos <br> su seguridad y la de su<br> familia.
 		     					
 		     				</p></font>
-		     				<a class="download-btn" href="https://www.apple.com/co/ios/app-store/" target="_blank"><img src="imagenes/appstore.png" alt="Download App Store" width="15%"></a>
-                            <a class="download-btn" href="https://play.google.com/store/apps?hl=es" target="_blank"	><img src="imagenes/android.png" alt="Download Play Store" width="17%"></a>	     				
+		     				<a class="download-btn" href="https://marvelapp.com/3a349e4" target="_blank"><img src="images/appstore.png" alt="Download App Store" width="15%"></a>
+                            <a class="download-btn" href="https://marvelapp.com/3a349e4" target="_blank"	><img src="images/android.png" alt="Download Play Store" width="17%"></a>	     				
 		     			</div>
 		      </div>
 		    </div>			    	    
@@ -197,7 +198,7 @@
   		<h4 class="text-center">Copyright <i class="fa fa-copyright"></i> 2018 Policía Nacional de Colombia</h4>
 
   		<!--<div class="text-left">
-  			<a href=""><img src="imagenes/escudo.png" width="3%"></a>
+  			<a href=""><img src="images/9.png" width="3%"></a>
   		</div> -->
 
   	</footer>
@@ -205,7 +206,7 @@
   		<script type="text/javascript" src="js/bootstrap.min.js"></script>
   		<script type="text/javascript" src="js/bootsflat.min.js">></script>
   		<script src="https://use.fontawesome.com/502b7294a9.js"></script>
-  		<script type="text/javascript" src="js/codigo.js"></script>
+  		<script type="text/javascript" src="js/code.js"></script>
 
   </body>
 </html>
